--- a/index.html
+++ b/index.html
@@ -13,65 +13,144 @@
     <article>
         <section>
             <table>
-                <caption>Tabel 1: Een aantal cursussen die door de LOI worden aangeboden</caption>
+                <caption>Tabel 1: Verkopen per filiaal per medewerker</caption>
                 <thead>
                     <tr>
-                        <th colspan="1" scope="col">Vakgebied</th>
-                        <th>Cursus</th>
+                        <th colspan="3"></th>
+                        <th colspan="3">Filiaal</th>
+                        <th></th>
                     </tr>
                 </thead>
+                <tbody>
                     <tr>
-                        <td rowspan="6" scope="rowgroup">Informatica, PC en internet</td>
-                        <td>Excel</td>
+                        <td>Product</td>
+                        <td>Jaar</td>
+                        <td>Verkoper</td>
+                        <td>Delft</td>
+                        <td>Rotterdam</td>
+                        <td>Den Haag</td>
+                        <td>Totaal</td>
                     </tr>
                     <tr>
-                        <td>Office</td>
+                        <td rowspan="6">Laptop</td>
+                        <td rowspan="2">2014</td>
+                        <td>Jansen</td>
+                        <td>300</td>
+                        <td>20</td>
+                        <td>512</td>
+                        <td>832</td>
                     </tr>
                     <tr>
-                        <td>Google AdWords</td>
+                        <td>van Veen</td>
+                        <td>33</td>
+                        <td>476</td>
+                        <td>120</td>
+                        <td>629</td>
                     </tr>
                     <tr>
-                        <td>Webanalyse</td>
+                        <td colspan="2">Totaal 2014</td>
+                        <td>333</td>
+                        <td>496</td>
+                        <td>632</td>
+                        <td>1461</td>
                     </tr>
                     <tr>
-                        <td>PHP en MySQL Professional</td>
+                        <td rowspan="2">2015</td>
+                        <td>Jansen</td>
+                        <td>275</td>
+                        <td>85</td>
+                        <td>473</td>
+                        <td>833</td>
                     </tr>
                     <tr>
-                        <td>Visual Basic</td>
+                        <td>van Veen</td>
+                        <td>15</td>
+                        <td>236</td>
+                        <td>110</td>
+                        <td>361</td>
                     </tr>
                     <tr>
-                        <td rowspan="3" scope="rowgroup">Hobby</td>
-                        <td>Filosofie</td>
+                        <td colspan="2">Totaal 2015</td>
+                        <td>290</td>
+                        <td>321</td>
+                        <td>583</td>
+                        <td>1194</td>
                     </tr>
                     <tr>
-                        <td>Voetverzorging</td>
+                        <td colspan="3">Laptop totaal</td>
+                        <td>623</td>
+                        <td>817</td>
+                        <td>1215</td>
+                        <td>2655</td>
+                    <tr>
+                        <td colspan="3">Laptop totaal</td>
+                        <td>623</td>
+                        <td>817</td>
+                        <td>1215</td>
+                        <td>2655</td>
                     </tr>
                     <tr>
-                        <td>Beleggen voor beginners</td>
-                    </tr>
-                    <tr>
-                        <td rowspan="2" scope="rowgroup">Talen</td>
-                        <td>Spaans voor beginners</td>
-                    </tr>
-                    <tr>
-                        <td>Engels voor gevorderden</td>
-                    </tr>
-                    <tr>
-                        <td rowspan="5" scope="rowgroup">Onderwijs</td>
-                        <td>BOA voor leerplichtambtenaren</td>
-                    </tr>
-                    <tr>
-                        <td>Inleiding pedagogiek en onderwijskunde</td>
-                    </tr>
-                    <tr>
-                        <td>Inleiding pedagog en onderwijskunde (spoedcursus)</td>
-                    </tr>
-                    <tr>
-                        <td>Leren studeren met dyslexie</td>
-                    </tr>
-                    <tr>
-                        <td>Spelbegeleiding</td>
-                    </tr>
+                        <td rowspan="6">Tablet</td>
+                            <td rowspan="2">2014</td>
+                            <td>Jansen</td>
+                            <td>638</td>
+                            <td>36</td>
+                            <td>1265</td>
+                            <td>1939</td>
+                        </tr>
+                        <tr>
+                            <td>van Veen</td>
+                            <td>533</td>
+                            <td>376</td>
+                            <td>758</td>
+                            <td>1667</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">Totaal 2014</td>
+                            <td>1171</td>
+                            <td>412</td>
+                            <td>2023</td>
+                            <td>3606</td>
+                        </tr>
+                        <tr>
+                            <td rowspan="2">2015</td>
+                            <td>Jansen</td>
+                            <td>990</td>
+                            <td>71</td>
+                            <td>1575</td>
+                            <td>2636</td>
+                        </tr>
+                        <tr>
+                            <td>van Veen</td>
+                            <td>598</td>
+                            <td>958</td>
+                            <td>1436</td>
+                            <td>2992</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">Totaal 2015</td>
+                            <td>1588</td>
+                            <td>1029</td>
+                            <td>3011</td>
+                            <td>5628</td>
+                        </tr>
+                        <tr>
+                            <td colspan="3">Tablet totaal</td>
+                            <td>2759</td>
+                            <td>1441</td>
+                            <td>5034</td>
+                            <td>9234</td>
+                        </tr>
+                    </tbody>
+                        <tfoot>
+                            <tr>
+                                <td colspan="3">Totaal</td>
+                                <td>3382</td>
+                                <td>2258</td>
+                                <td>6249</td>
+                                <td>11889</td>
+                            </tr>
+                        </tfoot>
             </table>
         </section>
     </article>
